# taskmill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  release-plz.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  pre-release.yml  release-plz.yml
benches/: dependencies.rs  groups.rs  history.rs  retry.rs  scheduler.rs  tags.rs
docs/: ARCHITECTURE.md  configuration.md  design.md  features.md  glossary.md  io-and-backpressure.md  library-modules.md  metrics.md  migrating-to-0.4.md  migrating-to-0.5.md  migrating-to-0.6.md  migrating-to-0.7.md  multi-module-apps.md  persistence-and-recovery.md  priorities-and-preemption.md  progress-and-events.md  progress-reporting.md  query-apis.md  quick-start.md  why-taskmill.md
docs/guides/: background-service.md  tauri-upload-queue.md
examples/: profile_dep_chain.rs  test_sibling.rs
migrations/: 001_tasks.sql  002_add_label.sql  002_task_history.sql  003_net_io_and_groups.sql  003_task_deps.sql  004_task_tags.sql  004_ttl.sql  005_paused_groups.sql  005_scheduling.sql  006_dependencies.sql  007_tags.sql  008_retry_backoff.sql  009_memo.sql  010_paused_groups.sql
src/: backpressure.rs  domain.rs  lib.rs  module.rs  priority.rs  registry.rs  store.rs  task.rs
src/registry/: child_spawner.rs  context.rs  domain_context.rs  io_tracker.rs  mod.rs  state.rs
src/resource/: mod.rs  network_pressure.rs  sampler.rs  sysinfo_monitor.rs
src/scheduler/: aging.rs  builder.rs  control.rs  counters.rs  dispatch.rs  event.rs  fair.rs  gate.rs  metrics_bridge.rs  mod.rs  progress.rs  queries.rs  rate_limit.rs  run_loop.rs  spawn.rs  submit.rs  tests.rs
src/scheduler/spawn/: completion.rs  context.rs  failure.rs  parent.rs
src/store/: dependencies.rs  hierarchy.rs  lifecycle.rs  mod.rs  query.rs  row_mapping.rs  submit.rs
src/store/lifecycle/: cancel_expire.rs  complete.rs  dependencies.rs  fail.rs  mod.rs  pop.rs  tests.rs  transitions.rs
src/store/query/: active.rs  history.rs  mod.rs  scheduling.rs  tags.rs  tests.rs
src/store/submit/: dedup.rs  dependencies.rs  mod.rs  tests.rs
src/task/: dedup.rs  error.rs  mod.rs  retry.rs  submission.rs  submit_builder.rs  tests.rs  typed.rs
tests/: integration.rs
tests/integration/: aging.rs  common.rs  cross_module.rs  dependencies.rs  fair_scheduling.rs  group_pause.rs  memo.rs  metrics.rs  module_features.rs  modules.rs  rate_limit.rs  retry_policy.rs  scheduler_core.rs  sibling_spawn.rs  typed_events.rs
timeline/: data.js
