[package]
name = "taskmill"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Adaptive priority work scheduler with IO-aware concurrency and SQLite persistence"
keywords = ["scheduler", "priority-queue", "task", "async"]
categories = ["asynchronous", "concurrency"]
repository = "https://github.com/deepjoy/taskmill"

[features]
default = ["sysinfo-monitor"]
sysinfo-monitor = ["dep:sysinfo"]

[dependencies]
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-util = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tracing = "0.1"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
fastrand = "2"
sysinfo = { version = "0.33", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "scheduler"
harness = false
