[package]
name = "taskmill"
version = "0.7.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Adaptive priority work scheduler with IO-aware concurrency and SQLite persistence"
keywords = ["scheduler", "priority-queue", "task", "async"]
categories = ["asynchronous", "concurrency"]
repository = "https://github.com/deepjoy/taskmill"

[lib]
bench = false

[features]
default = ["sysinfo-monitor"]
sysinfo-monitor = ["dep:sysinfo"]
metrics = ["dep:metrics"]
profile = ["dep:pprof"]

[dependencies]
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-util = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tracing = "0.1"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
fastrand = "2"
metrics = { version = "0.24", optional = true }
sysinfo = { version = "0.33", optional = true }
pprof = { version = "0.13", features = ["flamegraph", "criterion"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }
metrics = "0.24"
metrics-util = "0.19"

[[bench]]
name = "scheduler"
harness = false

[[bench]]
name = "retry"
harness = false

[[bench]]
name = "dependencies"
harness = false

[[bench]]
name = "tags"
harness = false

[[bench]]
name = "groups"
harness = false

[[bench]]
name = "history"
harness = false
